commit before making changes to Wikipedia API on infoWindow

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Left Section Search-->
         <div class="col-md-3 search">
             <div>
-              <input type="text" name="name" placeholder="Search Location">
+              <input id="pac-input" ype="text" name="name" placeholder="Search Location">
             </div>
         </div>
         <!-- Right Section Title-->
@@ -53,9 +53,10 @@
 
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="model.js"></script>
     <script src="app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArUU4jJKUG9CgaRdIhn2RAagmHYzaySyk&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyArUU4jJKUG9CgaRdIhn2RAagmHYzaySyk&callback=initMap"></script>
 
   </body>
 
