--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html> -->
+<!DOCTYPE html>
 
 <html>
   <head>
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyArUU4jJKUG9CgaRdIhn2RAagmHYzaySyk" onerror="errorHandling()"></script>
-    <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
+
+
 
     <title>Travel Destinations</title>
   </head>
@@ -35,29 +35,11 @@
       <div id="map"></div>
     </main>
 
-    <script>
-      /*
-       * Open the drawer when the menu ison is clicked.
-       */
-      var menu = document.querySelector('#menu');
-      var main = document.querySelector('main');
-      var drawer = document.querySelector('#drawer');
-
-      menu.addEventListener('click', function(e) {
-        drawer.classList.toggle('open');
-        e.stopPropagation();
-      });
-      main.addEventListener('click', function() {
-        drawer.classList.remove('open');
-      });
-
-    </script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="app.js"></script>
     <script src="model.js"></script>
-    <!-- <script src="app.js"></script> -->
-
-
+    <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyArUU4jJKUG9CgaRdIhn2RAagmHYzaySyk&callback=initMap" onerror="errorHandling()"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </body>
 
 </html>
