--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="styles.css" />
-
-
-
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Travel Destinations</title>
   </head>
 
@@ -34,12 +31,10 @@
       <h1>Travel Destinations</h1>
       <div id="map"></div>
     </main>
-
     <script src="app.js"></script>
     <script src="model.js"></script>
-    <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
+    <script src='bower_components/knockout/dist/knockout.js'></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyArUU4jJKUG9CgaRdIhn2RAagmHYzaySyk&callback=initMap" onerror="errorHandling()"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </body>
-
 </html>
